--- a/zsh/plugins.toml
+++ b/zsh/plugins.toml
@@ -25,6 +25,10 @@ github = 'zsh-users/zsh-autosuggestions'
 use = ["{{ name }}.zsh"]
 apply = ['defer']
 
+[plugins.zsh-completions]
+github = 'zsh-users/zsh-completions'
+apply = ["defer"]
+
 [plugins.zsh-syntax-highlighting]
 github = 'zsh-users/zsh-syntax-highlighting'
 apply = ['defer']
