--- a/vim/rc/lsp.toml
+++ b/vim/rc/lsp.toml
@@ -64,10 +64,11 @@ lua_source = '''
                 rootMarkers = { ".git/" },
                 languages = {
                     markdown = { {
-                        lintCommand = 'npx textlint --format unix ${INPUT}',
-                        lintFormats = { '%f:%l:%n: %m' }
+                        lintIgnoreExitCode = true,
+                        lintCommand = [[npx textlint -f json ${INPUT} | jq -r '.[] | .filePath as $filePath | .messages[] | "1;\($filePath):\(.line):\(.column):\n2;\(.message | split("\n")[0])\n3;[\(.ruleId)]"']],
+                        lintFormats = { '%E1;%E%f:%l:%c:', '%C2;%m', '%C3;%m%Z' },
+                        rootMarkers = { ".textlintrc", ".textlintrc.json" },
                     } }
-
                 }
             }
         },
