--- a/vim/rc/dein-lazy.toml
+++ b/vim/rc/dein-lazy.toml
@@ -110,6 +110,20 @@ lua_source = '''
 '''
 
 [[plugins]]
+repo = 'monaqa/dial.nvim'
+on_map = { nv = ['<Plug>', 'g<Plug>'] }
+hook_add = '''
+  nnoremap  <C-a>  <Plug>(dial-increment)
+  nnoremap  <C-x>  <Plug>(dial-decrement)
+  vnoremap  <C-a>  <Plug>(dial-increment)
+  vnoremap  <C-x>  <Plug>(dial-decrement)
+  nmap g<C-a> g<Plug>(dial-increment)
+  nmap g<C-x> g<Plug>(dial-decrement)
+  vmap g<C-a> g<Plug>(dial-increment)
+  vmap g<C-x> g<Plug>(dial-decrement)
+'''
+
+[[plugins]]
 repo = 'yuki-yano/fuzzy-motion.vim'
 depends = 'denops.vim'
 on_cmd = 'FuzzyMotion'
@@ -124,44 +138,15 @@ lua_add = '''
 '''
 
 [[plugins]]
-repo = 'nvim-treesitter/nvim-treesitter'
-on_event = 'BufEnter'
-hook_post_update = 'TSUpdate'
-lua_source = '''
-    require('nvim-treesitter.configs').setup {
-        ensure_installed = 'all',
-        additional_vim_regex_highlighting = false,
-
-        -- tex  : snipet挿入後とかでエラーが出る
-        highlight = {
-            enable = true,
-            disable = { 'latex', 'tex' },
-        },
-    }
-'''
-
-[[plugins]]
 repo = 'nvim-treesitter/nvim-treesitter-context'
 depends = 'nvim-treesitter'
-on_event = 'BufEnter'
+on_event = ['CursorMoved', 'CursorMovedI']
 
 [[plugins]]
 repo = 'lewis6991/gitsigns.nvim'
 on_event = 'BufReadPost'
 hook_source = '''
   lua require'gitsigns'.setup()
-'''
-
-[[plugins]]
-repo = 'lukas-reineke/indent-blankline.nvim'
-on_event = 'BufEnter'
-lua_source = '''
-    require('rc.util').highlight.set {
-        IndentBlanklineContextChar = { fg = '#6e6e6e', nocombine = true }
-    }
-    require('indent_blankline').setup {
-        show_current_context = true,
-    }
 '''
 
 [[plugins]]
