--- a/vim/rc/lsp.toml
+++ b/vim/rc/lsp.toml
@@ -7,7 +7,7 @@ hook_add = '''
   command! Format lua vim.lsp.buf.format()
 '''
 lua_source = '''
-    for type, icon in pairs({ Error = "", Warn = "", Hint = "", Info = "" }) do
+    for type, icon in pairs({ Error = "", Warn = "", Hint = "󰌶", Info = "" }) do
         local hl = "DiagnosticSign" .. type
         vim.fn.sign_define(hl, { text = icon, texthl = hl, numhl = hl })
     end
