--- a/vim/rc/dein-lazy.toml
+++ b/vim/rc/dein-lazy.toml
@@ -223,6 +223,31 @@ hook_add = '''
 '''
 
 [[plugins]]
+repo = 'skanehira/denops-silicon.vim'
+depends = 'denops.vim'
+# on_event = 'CmdlineEnter'
+on_cmd = 'Silicon'
+hook_add = '''
+  let g:silicon_options = {
+    \  'font': 'PleckJP',
+    \  'no_line_number': v:false,
+    \  'no_round_corner': v:false,
+    \  'no_window_controls': v:false,
+    \  'background_color': '#303030',
+    \  'line_offset': 1,
+    \  'line_pad': 2,
+    \  'pad_horiz': 80,
+    \  'pad_vert': 100,
+    \  'shadow_blur_radius': 0,
+    \  'shadow_color': '#f6f5f5',
+    \  'shadow_offset_x': 0,
+    \  'shadow_offset_y': 0,
+    \  'tab_width': 4,
+    \  'theme': 'GitHub',
+    \ }
+'''
+
+[[plugins]]
 repo = 'prettier/vim-prettier'
 build = 'pnpm install'
 on_ft = ['astro', 'typescriptreact', 'markdown']
