--- a/vim/rc/dein-lazy.toml
+++ b/vim/rc/dein-lazy.toml
@@ -249,7 +249,7 @@ hook_add = '''
 
 [[plugins]]
 repo = 'prettier/vim-prettier'
-build = 'pnpm install'
+build = 'pnpm install --production'
 on_ft = ['astro', 'typescriptreact', 'markdown']
 hook_source = '''
   autocmd BufWritePre *.astro,*.tsx,*.md PrettierAsync
